--- a/views/thongke/sanpham.ejs
+++ b/views/thongke/sanpham.ejs
@@ -60,12 +60,14 @@
                 <% for (let i=0; i < dataSp.length; i++) { %>
                   <% totalRevenue +=dataSp[i]; %>
                     <% } %>
-                    <button type="button" class="btn btn-danger" onclick="hideAllExcept()">Tổng Bán Được: <%= totalRevenue.toLocaleString() %></button>
-                    <button type="button" class="btn btn-primary ms-4" onclick="showTop10BanChay()">top 10 bán chạy</button>
-                    <button type="button" class="btn btn-success ms-4" onclick="showTop10YeuThich()">top 10 yêu thích</button>
-                    <button type="button" class="btn btn-success ms-4 btnkho" onclick="showKho()">Kho <span id="vietnamDateTime"> </span> : <%= kho %> sản phẩm</button>
+                      <button type="button" class="btn btn-danger" onclick="hideAllExcept()">Tổng Bán Được: <%=
+                          totalRevenue.toLocaleString() %></button>
+                      <button type="button" class="btn btn-primary ms-4" onclick="showTop10BanChay()">top 10 bán
+                        chạy</button>
+                      <button type="button" class="btn btn-success ms-4 btnkho" onclick="showKho()">Kho <span
+                          id="vietnamDateTime"> </span> : <%= kho %> sản phẩm</button>
             </div>
-            <div  class="thongsoTheoThang">
+            <div class="thongsoTheoThang">
               <% for (let i=0; i <=11; i++) { %>
                 <% if(dataSp[i]==0){ %>
                   <% continue; %>
@@ -76,7 +78,7 @@
                       <% } %>
             </div>
             <div class="top10banchay" style="display: none;">
-               <% if(top10banchay){%>
+              <% if(top10banchay){%>
                 <table class="table table-bordered table-hover mt-3">
                   <thead>
                     <tr class="align-middle text-center">
@@ -85,7 +87,7 @@
                       <th scope="col" class="col-md-3 sm-3">Tên laptop</th>
                       <th scope="col" class="col-md-1.5 sm-1.5">Thông số</th>
                       <th scope="col" class="col-md-1.5 sm-1.5">Doanh số (Đã Bán)</th>
-                      <th scope="col" class="col-md-3.5 sm-3.5">Hành động</th>  
+                      <th scope="col" class="col-md-3.5 sm-3.5">Hành động</th>
                     </tr>
                   </thead>
                   <t class="table-group-divider">
@@ -101,9 +103,10 @@
                             <%= product.tenSanPham.length> 30 ? '...' : '' %>
                         </td>
                         <td>
-                          <%= product.ram %> <%= product.rom  %>
+                          <%= product.ram %>
+                            <%= product.rom %>
                         </td>
-                        
+
                         <td>
                           <%= product.totalQuantity %>
                         </td>
@@ -112,15 +115,60 @@
                         </td>
                       </tr>
                       <% }); %>
-                  </tbody>
+                        </tbody>
                 </table>
-               <%} %>
+                <%}else{%>
+
+               <% } %>
             </div>
-            <div class="top10yeuthich" style="display: none;">
-              yêu thích 
-            </div>
+
             <div class="thongkekho" style="display: none;">
-                kho 
+              <% if(spKho){%>
+                <table class="table table-bordered table-hover mt-3">
+                  <thead>
+                    <tr class="align-middle text-center">
+                      <th scope="col" class="col-md-0.5 sm-0.5">Stt</th>
+                      <th scope="col" class="col-md-1 sm-1">Ảnh</th>
+                      <th scope="col" class="col-md-3 sm-3">Tên laptop</th>
+                      <th scope="col" class="col-md-1.5 sm-1.5">Thông số</th>
+                      <th scope="col" class="col-md-1.5 sm-1.5">Còn Trong Kho (Chiếc)</th>
+                      <th scope="col" class="col-md-3.5 sm-3.5">Trạng Thái</th>
+                    </tr>
+                  </thead>
+                  <t class="table-group-divider">
+                    <% spKho.forEach((product, index)=> { %>
+                      <tr class="align-middle text-center">
+                        <th scope="row">
+                          <%= index + 1 %>
+                        </th>
+                        <td><img src="<%= product.anhSanPham %>" alt="Ảnh sản phẩm" width="70"></td>
+                        <td class="text-truncate overflow-hidden text-start" data-bs-toggle="tooltip"
+                          title="<%= product.tenSanPham %>">
+                          <%= product.tenSanPham.substring(0, 30) %>
+                            <%= product.tenSanPham.length> 30 ? '...' : '' %>
+                        </td>
+                        <td>
+                          <%= product.bienThe.ram %>
+                            <%= product.bienThe.rom %>
+                        </td>
+
+                        <td>
+                          <%= product.bienThe.soLuong  %>
+                        </td>
+                        <td>
+                         <% if (product.trangThai) { %>
+                            Đang Bán
+                        <% }else{%>
+                            Ngừng bán
+                       <% } %> 
+                        </td>
+                      </tr>
+                      <% }); %>
+                        </tbody>
+                </table>
+                <%}else{%>
+
+               <% } %>
             </div>
 
 
@@ -131,49 +179,41 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
     function showTop10BanChay() {
-        document.querySelector('.thongsoTheoThang').style.display = 'none';
-        document.querySelector('.top10banchay').style.display = 'block';
-        document.querySelector('.top10yeuthich').style.display = 'none';
-        document.querySelector('.thongkekho').style.display = 'none';
-    }
+      document.querySelector('.thongsoTheoThang').style.display = 'none';
+      document.querySelector('.top10banchay').style.display = 'block';
 
-    function showTop10YeuThich() {
-        document.querySelector('.thongsoTheoThang').style.display = 'none';
-        document.querySelector('.top10banchay').style.display = 'none';
-        document.querySelector('.top10yeuthich').style.display = 'block';
-        document.querySelector('.thongkekho').style.display = 'none';
+      document.querySelector('.thongkekho').style.display = 'none';
     }
-
     function hideAllExcept() {
-        
-        document.querySelector('.thongsoTheoThang').style.display = 'block';
-        document.querySelector('.top10banchay').style.display = 'none';
-        document.querySelector('.top10yeuthich').style.display = 'none';
-        document.querySelector('.thongkekho').style.display = 'none';
+
+      document.querySelector('.thongsoTheoThang').style.display = 'block';
+      document.querySelector('.top10banchay').style.display = 'none';
+
+      document.querySelector('.thongkekho').style.display = 'none';
     }
     function showKho() {
-        document.querySelector('.thongsoTheoThang').style.display = 'none';
-        document.querySelector('.top10banchay').style.display = 'none';
-        document.querySelector('.top10yeuthich').style.display = 'none';
-        document.querySelector('.thongkekho').style.display = 'block';
+      document.querySelector('.thongsoTheoThang').style.display = 'none';
+      document.querySelector('.top10banchay').style.display = 'none';
+
+      document.querySelector('.thongkekho').style.display = 'block';
     }
-</script>
-<script>
-  function displayVietnamDateTime() {
-    // Lấy thời gian hiện tại
-    const currentDateTime = new Date();
-    
-    // Chuyển múi giờ sang múi giờ của Việt Nam (UTC+7)
-    const vietnamDateTime = new Date(currentDateTime.getTime() + (7 * 60 * 60 * 1000));
+  </script>
+  <script>
+    function displayVietnamDateTime() {
+      // Lấy thời gian hiện tại
+      const currentDateTime = new Date();
 
-    // Định dạng thời gian theo định dạng ngày tháng của Việt Nam
-    const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: 'numeric', minute: 'numeric', second: 'numeric', timeZone: 'Asia/Ho_Chi_Minh' };
-    const formattedDateTime = vietnamDateTime.toLocaleDateString('vi-VN', options);
+      // Chuyển múi giờ sang múi giờ của Việt Nam (UTC+7)
+      const vietnamDateTime = new Date(currentDateTime.getTime() + (7 * 60 * 60 * 1000));
 
-    // Hiển thị ngày giờ của Việt Nam
-    document.getElementById("vietnamDateTime").textContent = formattedDateTime;
-  }
-</script>
+      // Định dạng thời gian theo định dạng ngày tháng của Việt Nam
+      const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: 'numeric', minute: 'numeric', second: 'numeric', timeZone: 'Asia/Ho_Chi_Minh' };
+      const formattedDateTime = vietnamDateTime.toLocaleDateString('vi-VN', options);
+
+      // Hiển thị ngày giờ của Việt Nam
+      document.getElementById("vietnamDateTime").textContent = formattedDateTime;
+    }
+  </script>
   <script>
     const ctx = document.getElementById('myChart');
 
@@ -192,9 +232,9 @@
       },
       options: {
         animation: {
-          duration:3000
+          duration: 3000
         }
-        
+
       }
     });
 
