--- a/views/thongke/sanpham.ejs
+++ b/views/thongke/sanpham.ejs
@@ -72,7 +72,7 @@
                 <% if(dataSp[i]==0){ %>
                   <% continue; %>
                     <% } %>
-                      <a href="" class="btn btn-light w-100 mt-2 text-start">
+                      <a href="/Thong-ke/thongke-sanpham/<%= i+1 %>/<%= year %>" class="btn btn-light w-100 mt-2 text-start">
                         Tháng <%= i+1 %>: <%= dataSp[i].toLocaleString() %> Sản Phẩm
                       </a>
                       <% } %>
