--- a/views/inc/sidebar.ejs
+++ b/views/inc/sidebar.ejs
@@ -41,8 +41,14 @@
             </li>
             <li class="sidebar-item">
                 <a href="/khuyen-mai" class="sidebar-link">
-                    <i class="fa-solid fa-ticket pe-2"></i>
+                    <i class="fa-solid fa-gift pe-2"></i>
                     Khuyến mãi
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a href="/bao-hanh" class="sidebar-link">
+                    <i class="fa-solid fa-ticket pe-2"></i>
+                    Bảo hành
                 </a>
             </li>
             <li class="sidebar-item">
