--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -50,7 +50,7 @@
                     </div>
                   </div>
                   <div class="bot text-end ">
-                    <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                    <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="/don-hang">
                       Xem chi tiết ->
                     </a>
                   </div>
@@ -66,7 +66,7 @@
                     </div>
                   </div>
                   <div class="bot text-end ">
-                    <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                    <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="/user">
                       Xem chi tiết ->
                     </a>
                   </div>
@@ -82,7 +82,7 @@
                     </div>
                   </div>
                   <div class="bot text-end ">
-                    <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                    <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="/Thong-ke/Doanh-thu">
                       Xem chi tiết ->
                     </a>
                   </div>
@@ -137,79 +137,86 @@
              <div class="col-4 d-flex flex-column bg-light p-1 shadow bg-body-tertiary rounded ms-4 p-4">
               <h3 class="border-bottom text-center text-primary fw-bold">Thống kê App</h3>
               <div class="d-flex flex-row justify-content-between border-bottom p-1">
-                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="/user">
                  Tổng thành viên ->
                 </a>
                  <p class="fw-bold"><%= soLuongThanhVien %></p>
               </div>
               <div class="d-flex flex-row justify-content-between border-bottom p-1">
-                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="/san-pham">
                   Tổng sản phẩm ->
                 </a>
                  <p class="fw-bold"> <%= soLuongSp %></p>
               </div>
               <div class="d-flex flex-row justify-content-between border-bottom p-1">
-                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="/hang">
                   Tổng hãng ->
                 </a>
                <p class="fw-bold"><%= soLuongHang %></p>
               </div>
               <div class="d-flex flex-row justify-content-between border-bottom p-1">
-                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="/khuyen-mai">
                  Tổng khuyến mãi ->
                 </a>
                  <p class="fw-bold"><%= soLuongKM %></p>
               </div>
               <div class="d-flex flex-row justify-content-between border-bottom p-1">
-                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="user/new">
                  Thành viên mới ->
                 </a>
-                 <p class="fw-bold">10</p>
+                 <p class="fw-bold"><%= nguoiDungMoi %></p>
               </div>
            </div>
            <!-- thong ke ngày -->
            <div class="col-4 d-flex flex-column bg-light p-1 shadow bg-body-tertiary rounded ms-4 p-4">
             <h3 class="border-bottom text-center text-primary fw-bold">Thống kê Ngày</h3>
             <div class="d-flex flex-row justify-content-between border-bottom p-1">
-              <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+              <a  class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;"
+               href="/Thong-ke/chi-tiet/<%= day %>/<%= month+1%>/<%=year%>">
                 Doanh thu ->
               </a>
               <p class="fw-bold"><%= tongDoanhThu.toLocaleString() %> </p>
             </div>
             <div class="d-flex flex-row justify-content-between border-bottom p-1">
-              <a class="icon-link icon-link-hover text-warning" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+              <a class="icon-link icon-link-hover text-warning" style="--bs-link-hover-color-rgb: 25, 135, 84;" 
+              href="Thong-ke/chi-tiet/Chờ xác nhận/<%= day %>/<%= month+1 %>/<%= year %>">
                Chờ xác nhận ->
               </a>
                <p class="fw-bold"> <%= choXacNhanHomNay %></p>
             </div>
             <div class="d-flex flex-row justify-content-between border-bottom p-1">
-              <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+              <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;"
+              href="Thong-ke/chi-tiet/Chờ giao hàng/<%= day %>/<%= month+1 %>/<%= year %>">
                 Chờ giao hàng ->
               </a>
              <p class="fw-bold"><%= ChoGiaoHomNay %></p>
             </div>
             <div class="d-flex flex-row justify-content-between border-bottom p-1">
-              <a class="icon-link icon-link-hover text-primary-emphasis" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+              <a class="icon-link icon-link-hover text-primary-emphasis" style="--bs-link-hover-color-rgb: 25, 135, 84;"
+               href="Thong-ke/chi-tiet/Đang giao hàng/<%= day %>/<%= month+1 %>/<%= year %>">
                 Đang giao hàng ->
               </a>
              <p class="fw-bold"><%= DangGiaoHomNay %></p>
             </div>
             <div class="d-flex flex-row justify-content-between border-bottom p-1">
-              <a class="icon-link icon-link-hover text-success" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+              <a class="icon-link icon-link-hover text-success" style="--bs-link-hover-color-rgb: 25, 135, 84;" 
+              href="Thong-ke/chi-tiet/Đã giao hàng/<%= day %>/<%= month+1 %>/<%= year %>">
                 Giao thành công ->
               </a>
              <p class="fw-bold"> <%= giaoThanhCongHomNay%></p>
             </div>
             <div class="d-flex flex-row justify-content-between border-bottom p-1">
-              <a class="icon-link icon-link-hover text-danger" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+              <a class="icon-link icon-link-hover text-danger" style="--bs-link-hover-color-rgb: 25, 135, 84;" 
+              href="Thong-ke/chi-tiet/daHuy/<%= day %>/<%= month+1 %>/<%= year %>">
                 Đơn hàng đã hủy ->
               </a>
              <p class="fw-bold"> <%= daHuyHomNay%></p>
             </div>
             <div class="d-flex flex-row justify-content-between border-bottom p-1">
-              <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
-               Tổng đơn hàng ->
-              </a>
+              <a id="dynamicLink" class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" 
+              href="/Thong-ke/chi-tiet/<%= month+1 %>/<%= year %>">
+                Tổng đơn hàng ->
+              </a> 
                <p class="fw-bold"> <%= giaoThanhCongHomNay+DangGiaoHomNay+ChoGiaoHomNay+choXacNhanHomNay %> </p>
             </div>
          </div>
@@ -218,8 +225,6 @@
       </div>
       <%- include('../inc/footer') %>
   </div>
-
-
 
 </body>
 
