--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -96,37 +96,43 @@
               <div class="col-4 d-flex flex-column bg-light p-1 shadow bg-body-tertiary rounded  p-4">
                  <h3 class="border-bottom text-center text-primary fw-bold">Thống kê đơn hàng</h3>
                  <div class="d-flex flex-row justify-content-between border-bottom p-1">
-                    <a class="icon-link icon-link-hover text-warning" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                    <a class="icon-link icon-link-hover text-warning" style="--bs-link-hover-color-rgb: 25, 135, 84;
+                    " href="don-hang/?status=Chờ xác nhận">
                       Chờ xác nhận ->
                     </a>
                     <p class="fw-bold"><%= choXacNhan %></p>
                  </div>
                  <div class="d-flex flex-row justify-content-between border-bottom p-1">
-                  <a class="icon-link icon-link-hover text-primary" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                  <a class="icon-link icon-link-hover text-primary" style="--bs-link-hover-color-rgb: 25, 135, 84;
+                  " href="don-hang/?status=Chờ giao hàng">
                     Chờ giao ->
                   </a>
                   <p class="fw-bold"><%= choGiao %></p>
                  </div>
                  <div class="d-flex flex-row justify-content-between border-bottom p-1">
-                  <a class="icon-link icon-link-hover text-primary-emphasis" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                  <a class="icon-link icon-link-hover text-primary-emphasis" style="--bs-link-hover-color-rgb: 25, 135, 84;" 
+                  href="don-hang/?status=Đang giao hàng">
                     Đang giao ->
                   </a>
                   <p class="fw-bold"><%= dangGiao %></p>
                  </div>
                  <div class="d-flex flex-row justify-content-between border-bottom p-1">
-                  <a class="icon-link icon-link-hover text-success" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                  <a class="icon-link icon-link-hover text-success" style="--bs-link-hover-color-rgb: 25, 135, 84;" 
+                  href="don-hang/?status=Đã giao hàng">
                     Đã giao ->
                   </a>
                   <p class="fw-bold"><%= daGiao %></p>
                  </div>
                  <div class="d-flex flex-row justify-content-between border-bottom p-1">
-                  <a class="icon-link icon-link-hover text-danger" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                  <a class="icon-link icon-link-hover text-danger" style="--bs-link-hover-color-rgb: 25, 135, 84;" 
+                  href="don-hang/?status=Đã hủy">
                     Đã hủy ->
                   </a>
                   <p class="fw-bold"><%= daHuy %></p>
                  </div>
                  <div class="d-flex flex-row justify-content-between border-bottom p-1">
-                  <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="#">
+                  <a class="icon-link icon-link-hover" style="--bs-link-hover-color-rgb: 25, 135, 84;" 
+                  href="don-hang/?status=Tất cả">
                     Tổng đơn hàng ->
                   </a>
                   <p class="fw-bold"><%= daHuy +daGiao + dangGiao + choGiao+ choXacNhan %></p>
@@ -207,7 +213,7 @@
             </div>
             <div class="d-flex flex-row justify-content-between border-bottom p-1">
               <a class="icon-link icon-link-hover text-danger" style="--bs-link-hover-color-rgb: 25, 135, 84;" 
-              href="Thong-ke/chi-tiet/daHuy/<%= day %>/<%= month+1 %>/<%= year %>">
+              href="Thong-ke/chi-tiet/Đã hủy/<%= day %>/<%= month+1 %>/<%= year %>">
                 Đơn hàng đã hủy ->
               </a>
              <p class="fw-bold"> <%= daHuyHomNay%></p>
